<resources>
    <string name="app_name">ArchitectureV2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etIdHint"><![CDATA[User Id must be > 10]]></string>
    <string name="etAddTitleHint">Title</string>
    <string name="etAddBodyHint">Body</string>
    <string name="btnAddPostText">Add post</string>
    <string name="tvUserIDText">tvUserID</string>
    <string name="tvBodyText">tvBody</string>
    <string name="tvTitletext">tvTitle</string>
    <string name="btnFragment1Text">List of posts</string>
    <string name="btnFragment2Text">Add new posts</string>
    <string name="tvFirstFragmentText">First Fragment</string>
    <string name="tvSecondFragmentText">SecondFragment</string>
</resources>