<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SecondFragment">

    <TextView
        android:id="@+id/tvSecondFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSecondFragmentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layoutmargine"
        android:hint="@string/etIdHint"
        android:inputType="number"
        android:lines="1"
        android:maxLength="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondFragment" />

    <EditText
        android:id="@+id/etAddTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etAddTitleHint"
        android:lines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId" />

    <EditText
        android:id="@+id/etAddBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etAddBodyHint"
        android:lines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAddTitle" />

    <Button
        android:id="@+id/btnAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddPostText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddBody" />

</androidx.constraintlayout.widget.ConstraintLayout>
