<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rvGeneralID"
    android:padding="@dimen/padding">


    <TextView
        android:id="@+id/tvUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/tvUserIDText"
        android:layout_marginStart="@dimen/marginStart"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/tvTitleLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/tvTitletext"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/marginTop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserID" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="@dimen/tvTitleLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/tvBodyText"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    />

</androidx.constraintlayout.widget.ConstraintLayout>